// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenOverlay should render isVisible=true 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "bottom": 0,
          "height": 568,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 320,
        },
        Object {},
      ],
      Object {
        "backgroundColor": "rgba(0,0,0,0.3)",
      },
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "bottom": 0,
        "height": 568,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 320,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  />
</View>
`;

exports[`ScreenOverlay should render with default configuration 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "bottom": 0,
          "height": 568,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 320,
        },
        Object {},
      ],
      Object {
        "backgroundColor": "rgba(0,0,0,0.3)",
      },
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "bottom": 0,
        "height": 568,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 320,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  />
  <View />
</View>
`;

exports[`ScreenOverlay should render with default props 1`] = `
<View
  style={
    Array [
      Object {
        "height": 0,
        "overflow": "hidden",
      },
      Object {
        "backgroundColor": "rgba(0,0,0,0.3)",
      },
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "height": 0,
        "opacity": 1,
        "overflow": "hidden",
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  />
</View>
`;
